# kage

./: ARCHITECTURE.md  README.md
backend/: .env.example  .gitignore  README.md  package-lock.json  package.json  test-api.ts
backend/docs/: ARCHITECTURE.md
backend/prisma/: schema.prisma
backend/src/: app.ts  index.ts
backend/src/config/: index.ts
backend/src/lib/: claimProcessor.ts  prisma.ts  serviceKeypair.ts  serviceOrganization.ts  solana.ts  stealth.ts
backend/src/routes/: auth.ts  links.ts  organizations.ts  stealth.ts
backend/src/utils/: roles.ts
contract/: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
contract/encrypted-ixs/src/: lib.rs
contract/lib/: cctp-bridge.ts  compressed-payroll.ts  noir-proof-generator.ts  poseidon-bn254.ts  stealth-address.ts  stealth-scanner.ts
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: errors.rs  groth16_verifier.rs  lib.rs
contract/programs/contract/src/state/: claim_authorization.rs  compressed_position.rs  mod.rs  organization.rs  position.rs  schedule.rs  stealth_meta.rs  verification_key.rs
contract/scripts/: check-arcium-status.ts  check-compdef-status.ts  check-mxe-authority.ts  check-new-mxe.ts  debug-mxe-pda.ts  decode-mxe.ts  init-mxe-part2.ts  init-mxe.ts  reinit-comp-defs.ts  upload-circuits.ts  verify-compdef-hash.ts
contract/tests/: arcium-meta-keys.ts  cctp-bridge.ts  claim-withdraw.ts  compressed-claim-withdraw.ts  compressed-payroll.ts  contract.ts  debug-serialization.ts  noir-proof-generator.ts  stealth-address.ts  stealth-compressed-flow.ts
frontend/: README.md  UIUX.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: EmployeeLookup.tsx  EmployeeSetup.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx  WalletProvider.tsx
frontend/src/hooks/: index.ts  useBackend.ts  useMetaKeysVault.ts  useOrganization.ts  usePositions.ts  useProgram.ts  useVaultKeys.ts
frontend/src/lib/: api.ts  constants.ts  helius-events.ts  stealth-address.ts  stealth-key-cache.ts
frontend/src/pages/: Claim.tsx  index.ts  (+4 more)
noir-circuits/: README.md
noir-circuits/eligibility/: Nargo.toml  Prover.toml
noir-circuits/identity_proof/: Nargo.toml  Prover.toml
noir-circuits/withdrawal_proof/: Nargo.toml  Prover.toml
(+23 files in other folders)
