[package]
name = "contract"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token"] }
arcium-client = { default-features = false, version = "=0.6.6" }
arcium-macros = "=0.6.6"
arcium-anchor = "=0.6.6"

# Light Protocol for ZK Compression (5000x cost reduction)
# Using V2 API as per official documentation
light-sdk = { version = "0.19.0", features = ["anchor", "anchor-discriminator", "cpi-context", "v2"] }
light-sdk-types = { version = "0.19.0", features = ["v2"] }
light-hasher = "5.0.0"

# Groth16 ZK proof verification using Solana's native alt_bn128 syscalls
solana-bn254 = "2.2.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
